swagger fmt 및 param 수정
